# my-lib

./: LICENSE  README.md  pyproject.toml
my_lib/: __init__.py  favorites.py
tests/: test_favorites.py
