[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-lib"
version = "0.1.0"
description = "A small collection of my favorite utility functions"
authors = [ { name = "tadinve" } ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

[project.urls]
homepage = "https://example.com"

[tool.setuptools]
packages = ["my_lib"]
